# triangle

./: .clang-format  .gitignore  CMakeLists.txt
SFML-2.5.1/doc/html/: classsf_1_1Keyboard.html  classsf_1_1RectangleShape-members.html  classsf_1_1RectangleShape.html  classsf_1_1RenderTexture.html
programm/: app.cpp  app.hpp  main.cpp  myvertex.cpp  myvertex.hpp  triangle.cpp  triangle.hpp
